Work in progress

--- a/rudder-lang/tools/rudderc-prod.conf
+++ b/rudder-lang/tools/rudderc-prod.conf
@@ -1,17 +1,26 @@
 [shared]
-#stdlib="/opt/rudder/share/rudder-lang/lib/"
+stdlib ="/opt/rudder/share/rudder-lang/lib/"
 #cfengine_methods="/usr/share/ncf/tree/30_generic_methods/"
 #alt_cfengine_methods="/var/rudder/configuration-repository/ncf/30_generic_methods"
 #dsc_methods="/var/rudder/configuration-repository/dsc/ncf/30_generic_methods/"
 
+# todo update path, probably erroned
 [compile]
-source="/var/rudder/configuration-repository/techniques/" # must be appened with ${technique_category}/${technique_name}.${source_format}
-dest="/tmp/rudderc/tester/"
-format="cfengine"
+input="/var/rudder/configuration-repository/techniques/ncf_techniques/"
+output="/tmp/rudderc/tester/"
 
-[translate]
-source="/tmp/rudderc/tester/"
-dest="/tmp/rudderc/tester/"
+[migrate]
+input="/tmp/rudderc/tester/"
+output="/tmp/rudderc/tester/"
+
+[technique_read]
+input="/var/rudder/configuration-repository/techniques/ncf_techniques/"
+output="/tmp/rudderc/tester/"
+
+[technique_generate]
+input="/var/rudder/configuration-repository/techniques/ncf_techniques/"
+output="/tmp/rudderc/tester/"
+
 
 [testing_loop]
 cfengine="/opt/rudder/bin/cf-promises"
