--- a/rudder-lang/tools/rudderc-dev.conf
+++ b/rudder-lang/tools/rudderc-dev.conf
@@ -7,13 +7,20 @@ alt_cfengine_methods="repos/dsc/plugin/ncf/30_generic_methods/"
 dsc_methods="repos/dsc/packaging/Files/share/initial-policy/ncf/30_generic_methods/"
 
 [compile]
-source="tests/techniques/"
-dest="tests/techniques/"
-format="cfengine"
+input="tests/techniques/"
+output="tests/techniques/"
 
-[translate]
-source="tests/techniques/"
-dest="tests/techniques/"
+[migrate]
+input="tests/techniques/"
+output="tests/techniques/"
+
+[technique_read]
+input="tests/techniques/"
+output="tests/techniques/"
+
+[technique_generate]
+input="tests/techniques/"
+output="tests/techniques/"
 
 [testing_loop]
 cfengine="/opt/rudder/bin/cf-promises"
