--- a/relay/sources/apache/rudder-apache-relay-ssl.conf
+++ b/relay/sources/apache/rudder-apache-relay-ssl.conf
@@ -45,13 +45,15 @@ Alias /inventories /var/rudder/inventories/incoming
   AuthType Basic
   AuthUserFile /opt/rudder/etc/htpasswd-webdav-initial
 
-  <RequireAll>
-    Require valid-user
-    <RequireAny>
-      # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
-      Include /opt/rudder/etc/rudder-networks-24.conf
-    </RequireAny>
-  </RequireAll>
+  <Limit PUT>
+    <RequireAll>
+      Require valid-user
+      <RequireAny>
+        # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+        Include /opt/rudder/etc/rudder-networks-24.conf
+      </RequireAny>
+    </RequireAll>
+  </Limit>
 
   <LimitExcept PUT>
     Require all denied
@@ -66,13 +68,15 @@ Alias /inventory-updates /var/rudder/inventories/accepted-nodes-updates
   AuthType Basic
   AuthUserFile /opt/rudder/etc/htpasswd-webdav
 
-  <RequireAll>
-    Require valid-user
-    <RequireAny>
-      # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
-      Include /opt/rudder/etc/rudder-networks-24.conf
-    </RequireAny>
-  </RequireAll>
+  <Limit PUT>
+    <RequireAll>
+      Require valid-user
+      <RequireAny>
+        # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+        Include /opt/rudder/etc/rudder-networks-24.conf
+      </RequireAny>
+    </RequireAll>
+  </Limit>
 
   <LimitExcept PUT>
     Require all denied
@@ -87,13 +91,15 @@ Alias /reports /var/rudder/reports/incoming
   AuthType Basic
   AuthUserFile /opt/rudder/etc/htpasswd-webdav
 
-  <RequireAll>
-    Require valid-user
-    <RequireAny>
-      # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
-      Include /opt/rudder/etc/rudder-networks-24.conf
-    </RequireAny>
-  </RequireAll>
+  <Limit PUT>
+    <RequireAll>
+      Require valid-user
+      <RequireAny>
+        # rudder-networks-24.conf is automatically generated according to the hosts allowed by rudder.
+        Include /opt/rudder/etc/rudder-networks-24.conf
+      </RequireAny>
+    </RequireAll>
+  </Limit>
 
   <LimitExcept PUT>
     Require all denied
