Fixes #18336: improve documentation on ho o change a key for a node by stating that \n is mandatory around begin and end

--- a/webapp/sources/rudder/rudder-core/pom.xml
+++ b/webapp/sources/rudder/rudder-core/pom.xml
@@ -91,6 +91,14 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
       <version>${rudder-version}</version>
     </dependency>
 
+    <!-- only for tests -->
+    <dependency>
+      <groupId>com.normation.inventory</groupId>
+      <artifactId>inventory-fusion</artifactId>
+      <version>${rudder-version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>com.normation</groupId>
       <artifactId>utils</artifactId>
