Fixes #18347: Group owner of files under configuration-repository are inconsistent

--- a/webapp/sources/rudder/rudder-web/src/main/resources/configuration.properties.sample
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/configuration.properties.sample
@@ -367,6 +367,12 @@ rudder.batch.techniqueLibrary.updateInterval=5
 #
 rudder.dir.gitRoot=/var/rudder/configuration-repository
 
+#
+# Group owner for files created by rudder application in configuration-repository
+# directory (typically, configuration object serialization)
+#
+rudder.config.repo.new.file.group.owner=rudder
+
 ###############################
 # Dynamic group configuration  ######################################################
 ###############################
