--- a/rudder-lang/Cargo.toml
+++ b/rudder-lang/Cargo.toml
@@ -28,6 +28,7 @@ toml = "0.5"
 typed-arena = "2.0"
 walkdir = "2"
 backtrace = "0.3"
+strum = { version = "0.19", features = ["derive"] }
 
 [dev-dependencies]
 test-case = "1"
