Fixes #18371: Rudder-lang doc build broken by ncf parameter

--- a/rudder-lang/Makefile
+++ b/rudder-lang/Makefile
@@ -68,7 +68,7 @@ libs:
 libs-docs: libs
 	mkdir -p target/docs/std
 	# FIXME replace with proper option
-	cargo run -- -l info -c tools/rudderc-dev.conf -n simplest/technique.rl -f md
+	cargo run -- compile -c tools/rudderc-dev.conf -i simplest/technique.rl -f md
 	echo "" > target/docs/std/lib.adoc
 	for resource in $$(ls -1 target/docs/std/*.md); \
 	  do pandoc -t asciidoc -f commonmark $${resource} >> target/docs/std/lib.adoc; \
