Fixes #18395: Update dependencies for the webapp

--- a/webapp/sources/rudder/rudder-templates/pom.xml
+++ b/webapp/sources/rudder/rudder-templates/pom.xml
@@ -52,8 +52,8 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
   <dependencies>
 
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
       <version>${commons-lang-version}</version>
     </dependency>
 
