Fixes #18406: Missing base class of plugins breaks `reflections` with caffeine version 2.8.2

--- a/webapp/sources/pom.xml
+++ b/webapp/sources/pom.xml
@@ -382,6 +382,7 @@ limitations under the License.
     <config-version>1.4.0</config-version>
     <cafeine-version>2.8.6</cafeine-version>
     <jgrapht-version>1.4.0</jgrapht-version>
+    <reflections-version>0.9.12</reflections-version>
     <!--
       These one must be updated to work together
       We declare cats in "test" here, because it is not directly needed
