--- a/webapp/sources/api-doc/paths/nodes/apply-policy.yml
+++ b/webapp/sources/api-doc/paths/nodes/apply-policy.yml
@@ -1,8 +1,8 @@
 # SPDX-License-Identifier: CC-BY-SA-2.0
 # SPDX-FileCopyrightText: 2013-2020 Normation SAS
 post:
-  summary: Trigger a agent runs
-  description: This API allows to trigger an agent run on the target node. Response contains a json stating if agent could be started on each node, but not if the run went fine and do not display any output from it. You can see the result of the run in Rudder web interface or in the each agent logs.
+  summary: Trigger an agent run on all nodes
+  description: This API allows to trigger an agent run on all nodes. Response contains a json stating if agent could be started on each node, but not if the run went fine and do not display any output from it. You can see the result of the run in Rudder web interface or in the each agent logs.
   operationId: applyPolicyAllNodes
   responses:
     "200":
