Fixes #18477: Improve health check texts

--- a/webapp/sources/api-doc/paths/healthcheck/all.yml
+++ b/webapp/sources/api-doc/paths/healthcheck/all.yml
@@ -33,7 +33,7 @@ get:
                   $ref: ../../components/schemas/check.yml
 
   tags:
-    - Healthcheck
+    - "Health check"
   x-code-samples:
     - lang: curl
       source:
