Fixes #18581: fix ci tests

--- a/rudder-lang/Makefile
+++ b/rudder-lang/Makefile
@@ -84,7 +84,7 @@ libs-docs: libs
 docs: libs-docs
 	mkdir -p target/docs
 	cp -r docs/images target/docs/
-	asciidoctor --destination-dir=target/docs docs/index.adoc
-	asciidoctor --destination-dir=target/docs docs/contributing.adoc
+	asciidoctor --doctype=book --destination-dir=target/docs docs/index.adoc
+	asciidoctor --doctype=book --destination-dir=target/docs docs/contributing.adoc
 
 .PHONY: docs $(DOC_EXAMPLES) libs
