Fixes #18608: Bad file name in api-doc: set-allowed-networks.yml

--- a/webapp/sources/api-doc/paths/settings/allowed_networks_diff.yml
+++ b/webapp/sources/api-doc/paths/settings/allowed_networks_diff.yml
@@ -64,4 +64,4 @@ post:
   x-code-samples:
     - lang: curl
       source:
-        $ref: ../../code_samples/curl/settings/set-allowed-networks.yml
+        $ref: ../../code_samples/curl/settings/set-allowed-networks-diff.sh
